--- a/account-lead-insights-backend/.env.example
+++ b/account-lead-insights-backend/.env.example
@@ -2,6 +2,7 @@ OPENAI_API_KEY=your_openai_api_key_here
 OPENAI_MODEL=gpt-5-mini
 OPENAI_TIMEOUT_MS=30000
 OPENAI_ALLOW_FALLBACK=false
-HOST=127.0.0.1
+HOST=0.0.0.0
 PORT=9091
-LANDING_URL=/
+LANDING_URL=/landing.html
+FRONTEND_LANDING_URL=https://account-lead-insights.onrender.com/marketing
