--- a/account-lead-insights-backend/.env.example
+++ b/account-lead-insights-backend/.env.example
@@ -6,3 +6,4 @@ HOST=0.0.0.0
 PORT=9091
 LANDING_URL=/landing.html
 FRONTEND_LANDING_URL=https://account-lead-insights.onrender.com/marketing
+LOCAL_FRONTEND_LANDING_URL=http://127.0.0.1:9091/marketing
