Fix backend root to fall back to index and avoid Not Found on Render

--- a/account-lead-insights-backend/.env.example
+++ b/account-lead-insights-backend/.env.example
@@ -4,6 +4,6 @@ OPENAI_TIMEOUT_MS=30000
 OPENAI_ALLOW_FALLBACK=false
 HOST=0.0.0.0
 PORT=9091
-LANDING_URL=/landing.html
+LANDING_URL=/index.html
 FRONTEND_LANDING_URL=https://account-lead-insights.onrender.com/marketing
 LOCAL_FRONTEND_LANDING_URL=http://127.0.0.1:9091/marketing
